@@ -120,6 +120,7 @@ public abstract class ElasticsearchTestBasePlugin implements Plugin<Project> {
                 "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
                 "--add-opens=java.base/java.time=ALL-UNNAMED",
                 "--add-opens=java.management/java.lang.management=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED",
                 "-XX:+HeapDumpOnOutOfMemoryError"
             );
 
